<resources>
    <string name="app_name">ScreeningTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_form">LOGIN FORM</string>
    <string name="email">Email</string>
    <string name="pin">PIN</string>
    <string name="log_in">Log IN</string>
    <string name="register">Register</string>
    <string name="new_user">New User?</string>
    <string name="registration_form">REGISTRATION FORM</string>
    <string name="enter_parent_name">Enter Parent Name</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="set_6_digit_pin">Set 6 digit PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_the_otp_sent_to_the_above_number">Enter the OTP sent to the above number</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="didnt_receive_the_otp">Didnt receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="already_registered">Already Registered?</string>
    <string name="child_details">Child Details</string>
    <string name="enter_the_kid_name">Enter the Kid name</string>
    <string name="enter_the_age">Enter the age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_class">Select class</string>
    <string name="welcome">Welcome</string>
    <string name="child_name">CHILD NAME</string>
    <string name="child_age">CHILD AGE</string>
    <string name="child_dob">CHILD DOB</string>
    <string name="child_class">CHILD CLASS</string>
    <string name="test_1">TEST 1</string>
    <string name="take_test1">TAKE TEST1</string>
    <string name="view_report">View Report</string>
    <string name="test_2">TEST 2</string>
    <string name="take_test2">TAKE TEST2</string>
    <string name="question">Question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">NEXT</string>
    <string name="logout">LogOut</string>
    <string name="alert">Alert !</string>
    <string name="wantToExit">Are you sure? Do you want to exit the test</string>
    <string name="audioStartedPlaying">Audio started playing..</string>
    <string name="errorFoundIs">\"Error found is \"</string>
    <string name="audioPaused">Audio has been paused</string>
    <string name="audioNotPlayed">Audio has not played</string>
    <string name="AlreadyTookTest">Already took the test!</string>
    <string name="doYouWantToExit">Are you sure? Do you want to exit the test</string>
    <string name="ThisMustbeParent">This test must be attended by the parent</string>
    <string name="proceed">Proceed</string>
    <string name="wantTOLogout">Are you sure? Do you want to log out?</string>
    <string name="OnlyOneChild">You are allowed to have only one child for free</string>
    <string name="okay">Okay</string>
    <string name="freeTrialEnded">Your free trial has ended, pay for more trials</string>
    <string name="test2">Test 2</string>
    <string name="takeTheTes">Take the test1 to view the report</string>
    <string name="test1">Test1</string>
    <string name="share">Share</string>
    <string name="select_gender">Select Gender</string>
    <string name="child_gender">CHILD GENDER</string>
    <string name="free_trail">You are on your free Trail, You can add only one child to test</string>
    <string name="title_activity_main9">MainActivity9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login10">LoginActivity10</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>