<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".ChildActivity">
    <RelativeLayout
        android:background="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="40sp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24" />

        <Button
            android:id="@+id/logOut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="370dp"
            android:layout_marginTop="05dp"
            android:background="@drawable/ic_baseline_exit_to_app_24"
            android:text="@string/logout" />



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/TV00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/child_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/TV00"
                android:text=" Child name"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/TV01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/child_age"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/TV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@+id/TV01"
                android:text=" Child age"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/TV011"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/child_gender"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/TV21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@+id/TV011"
                android:text=" Child gender"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/TV02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/child_dob"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@+id/TV02"
                android:text=" Child DOB"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/TV03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/child_class"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TV4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@+id/TV03"
                android:text=" Child class"
                android:textSize="20sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/TV004"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/test_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/TV61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/TV004"
                android:text="@string/take_test1"
                android:textSize="13sp" />

            <Button
                android:id="@+id/TV62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_toEndOf="@+id/TV004"
                android:text="@string/view_report"
                android:textSize="13sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/TV04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/test_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/TV51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/TV04"
                android:text="@string/take_test2"
                android:textSize="13sp" />

            <Button
                android:id="@+id/TV52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_toEndOf="@+id/TV04"
                android:text="@string/view_report"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>


