<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">


        <Button
            android:id="@+id/langbtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="350dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_baseline_language_24"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                android:text="@string/login_form" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETLemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/pin"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                app:hintTextColor="@color/purple_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIETLpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/LLogIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/purple_500"
                android:text="@string/log_in"
                android:textColor="@color/white">

            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/RegTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/register"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>


