<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test1"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="40sp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/test_1"
            android:textColor="@color/black" />



    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardQues"
        app:cardBackgroundColor="#BFBFBF"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/TextQues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/question"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/idBtnPlay"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="300dp"
                android:background="@drawable/ic_baseline_play_circle_filled_24"
                android:textAllCaps="false" />

            <!--Button for pausing the audio-->
            <Button
                android:id="@+id/idBtnPause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_pause_circle_filled_24"
                android:textAllCaps="false" />

        </LinearLayout>




    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/CardOptn1"
        android:onClick="optionAClick"
        app:cardBackgroundColor="#BFBFBF"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/TextOptn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/yes"/>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/CardOptn2"
        android:onClick="optionBClick"
        app:cardBackgroundColor="#BFBFBF"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="UsingOnClickInXml">

        <TextView
            android:id="@+id/TextOptn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/no"/>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/next"
        android:backgroundTint="#BFBFBF"/>





</LinearLayout>